fix: mining type options returning objects instead of arrays
