# src/utils/swagger.json
@@ -284,347 +284,7 @@
           }
         }
       }
-    },
-    "/analysis": {
-      "get": {
-        "summary": "List analysis",
-        "description": "This route get all analysis or the ones matched with the query",
-        "tags": ["Analysis"],
-        "parameters": [
-          {
-            "name": "videoId",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "videoTitle",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "channelTitle",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Analysis found successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Analysis"
-                  }
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "No analysis found"
-          }
-        }
-      },
-      "post": {
-        "summary": "Create analysis",
-        "description": "This route creates a new analysis",
-        "tags": ["Analysis"],
-        "security": [{ "bearerAuth": [] }],
-        "parameters": [
-          {
-            "name": "videoId",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "type",
-            "in": "query",
-            "schema": {
-              "type": "string",
-              "enum": ["default", "mining", "custom"]
-            }
-          },
-          {
-            "name": "usersMood",
-            "in": "query",
-            "schema": {
-              "type": "boolean"
-            },
-            "description": "Only available for default and custom types"
-          },
-          {
-            "name": "mostCommentedWords",
-            "in": "query",
-            "schema": {
-              "type": "boolean"
-            },
-            "description": "Only available for mining and custom types"
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "words": {
-                    "type": "array",
-                    "items": {
-                      "type": "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-
-        "responses": {
-          "200": {
-            "description": "Analysis created successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "videoData": {
-                      "type": "object",
-                      "properties": {
-                        "channelTitle": {
-                          "type": "string"
-                        },
-                        "videoTitle": {
-                          "type": "string"
-                        },
-                        "publishedAt": {
-                          "type": "string"
-                        },
-                        "viewCount": {
-                          "type": "string"
-                        },
-                        "likeCount": {
-                          "type": "string"
-                        },
-                        "dislikeCount": {
-                          "type": "string"
-                        },
-                        "commentCount": {
-                          "type": "string"
-                        }
-                      }
-                    },
-                    "usersMood": {
-                      "type": "string"
-                    },
-                    "messages": {
-                      "type": "array",
-                      "items": {
-                        "type": "string"
-                      }
-                    },
-                    "mostCommentedWords": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "word": {
-                            "type": "string"
-                          },
-                          "timesUsed": {
-                            "type": "number"
-                          },
-                          "polarity": {
-                            "type": "string"
-                          },
-                          "class": {
-                            "type": "string"
-                          },
-                          "brothers": {
-                            "type": "array",
-                            "items": {
-                              "type": "object",
-                              "properties": {
-                                "word": {
-                                  "type": "string"
-                                },
-                                "timesUsed": {
-                                  "type": "number"
-                                },
-                                "polarity": {
-                                  "type": "string"
-                                },
-                                "class": {
-                                  "type": "string"
-                                }
-                              }
-                            }
-                          }
-                        }
-                      }
-                    },
-                    "requestedWords": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "word": {
-                            "type": "string"
-                          },
-                          "timesUsed": {
-                            "type": "number"
-                          },
-                          "polarity": {
-                            "type": "string"
-                          },
-                          "class": {
-                            "type": "string"
-                          },
-                          "brothers": {
-                            "type": "array",
-                            "items": {
-                              "type": "object",
-                              "properties": {
-                                "word": {
-                                  "type": "string"
-                                },
-                                "timesUsed": {
-                                  "type": "number"
-                                },
-                                "polarity": {
-                                  "type": "string"
-                                },
-                                "class": {
-                                  "type": "string"
-                                }
-                              }
-                            }
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid query"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/analysis/history": {
-      "get": {
-        "summary": "Get user analysis history",
-        "description": "This route returns the analysis history from the authenticated user",
-        "tags": ["Analysis"],
-        "security": [{ "bearerAuth": [] }],
-        "responses": {
-          "200": {
-            "description": "Analysis found successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Analysis"
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Analysis not found"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/analysis/{id}": {
-      "get": {
-        "summary": "Get analysis",
-        "description": "This route returns an analysis",
-        "tags": ["Analysis"],
-        "security": [{ "bearerAuth": [] }],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type":"string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Analysis found successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "$ref": "#/components/schemas/Analysis"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Analysis not found"
-          }
-        }
-      },
-      "delete": {
-        "summary": "Delete analysis",
-        "description": "This route deletes an analysis",
-        "tags": ["Analysis"],
-        "security": [{ "bearerAuth": [] }],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type":"string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Analysis deleted successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "$ref": "#/components/schemas/Analysis"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Analysis not found"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
     }
-    
   },
   "components": {
     "schemas": {
@@ -647,145 +307,6 @@
           "updated_at": {
             "type": "string",
             "format": "date"
-          }
-        }
-      },
-      "Analysis": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "userId": {
-            "type": "string"
-          },
-          "videoId": {
-            "type": "string"
-          },
-          "type": {
-            "type": "string"
-          },
-          "videoData": {
-            "type": "object",
-            "properties": {
-              "channelTitle": {
-                "type": "string"
-              },
-              "videoTitle": {
-                "type": "string"
-              },
-              "publishedAt": {
-                "type": "string"
-              },
-              "viewCount": {
-                "type": "string"
-              },
-              "likeCount": {
-                "type": "string"
-              },
-              "dislikeCount": {
-                "type": "string"
-              },
-              "commentCount": {
-                "type": "string"
-              }
-            }
-          },
-          "mostCommentedWords": {
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "word": {
-                  "type": "string"
-                },
-                "timesUsed": {
-                  "type": "number"
-                },
-                "polarity": {
-                  "type": "string"
-                },
-                "class": {
-                  "type": "string"
-                },
-                "brothers": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "word": {
-                        "type": "string"
-                      },
-                      "timesUsed": {
-                        "type": "number"
-                      },
-                      "polarity": {
-                        "type": "string"
-                      },
-                      "class": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "requestedWords": {
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "word": {
-                  "type": "string"
-                },
-                "timesUsed": {
-                  "type": "number"
-                },
-                "polarity": {
-                  "type": "string"
-                },
-                "class": {
-                  "type": "string"
-                },
-                "brothers": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "word": {
-                        "type": "string"
-                      },
-                      "timesUsed": {
-                        "type": "number"
-                      },
-                      "polarity": {
-                        "type": "string"
-                      },
-                      "class": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          
-          },
-          "usersMood": {
-            "type": "string"
-          },
-          "messages": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "created_at": {
-            "type": "string"
-          },
-          "updated_at": {
-            "type": "string"
           }
         }
       }
